--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Roland Schäfer, Freie Universität Berlin
 
 My CC-BY text book about GLMMs in linguistics and everything you need to
 understand them. Uses the template from Language Science Press (my preferred
-publisher in an adapted form for use with knitr.
+publisher) in an adapted form for use with knitr.
