--- a/README
+++ b/README
@@ -4,3 +4,15 @@ Roland Schäfer, Freie Universität Berlin
 My CC-BY text book about GLMMs in linguistics and everything you need to
 understand them. Uses the template from Language Science Press (my preferred
 publisher) in an adapted form for use with knitr.
+
+---
+
+The Inconsolata-g font can be obtained here:
+http://www.fantascienza.net/leonardo/ar/inconsolatag/inconsolata-g_font.zip
+
+I renamed it Inconsolatar.ttf.
+
+On Ubuntu:
+sudo mkdir /usr/share/fonts/truetype/customfonts
+sudo cp Inconsolatar.ttf /usr/share/fonts/truetype/customfonts/
+sudo fc-cache -fv
