Fixing issues on MacOS.

--- a/localpackages.tex
+++ b/localpackages.tex
@@ -19,4 +19,6 @@
 \usepackage{unicode-math}
 \setmathfont[Scale=MatchUppercase]{libertinusmath-regular.otf}
 
+\usepackage{csquotes}
+\usepackage{fontspec}
 
