Preface and some font hacking.

--- a/localcommands.tex
+++ b/localcommands.tex
@@ -17,3 +17,9 @@
 \newcommand{\regel}[1]{#1}
 \newcommand{\vernacular}[1]{\emph{#1}}
 \newcommand{\gloss}[1]{#1}
+
+\setlist{noitemsep}
+
+
+\newcommand{\software}[1]{{\small\texttt{#1}}}
+\newcommand{\ie}{i.\,e.,\ }
