--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for User at 2017-09-04 17:21:51 +0200 
+%% Created for User at 2017-09-04 19:42:12 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{ZuurEa2009,
+	Address = {Berlin etc.},
+	Author = {Zuur, Alain F. and Ieno, Elena N. and Walker, Neil and Saveliev, Anatoly A. and Smith, Graham M.},
+	Date-Added = {2017-09-04 17:41:49 +0000},
+	Date-Modified = {2017-09-04 17:41:49 +0000},
+	Owner = {user},
+	Publisher = {Springer},
+	Timestamp = {2013.03.10},
+	Title = {Mixed Effects Models and Extensions in Ecology with {R}},
+	Year = {2009}}
+
+@book{Fox2016,
+	Address = {London},
+	Author = {John Fox},
+	Date-Added = {2017-09-04 17:41:15 +0000},
+	Date-Modified = {2017-09-04 17:41:15 +0000},
+	Edition = {3},
+	Publisher = {Sage Publications},
+	Title = {Applied Regression Analysis \& Generalized Linear Models},
+	Year = {2016}}
+
+@book{FahrmeierEa2013,
+	Address = {Berlin etc.},
+	Author = {Ludwig Fahrmeir and Thomas Kneib and Stefan Lang and Brian Marx},
+	Date-Added = {2017-09-04 17:40:58 +0000},
+	Date-Modified = {2017-09-04 17:40:58 +0000},
+	Owner = {user},
+	Publisher = {Springer},
+	Timestamp = {2014.05.28},
+	Title = {Regression -- Models, Methods, and Application},
+	Year = {2013}}
 
 @book{GelmanEa2014,
 	Address = {Boca Raton},
