Preface, abbrs & symbols.

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for User at 2017-09-04 19:42:12 +0200 
+%% Created for User at 2017-09-04 23:18:55 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Chalmers2013,
+	Address = {Maidenhead},
+	Author = {Alan Chalmers},
+	Date-Added = {2017-09-04 21:18:55 +0000},
+	Date-Modified = {2017-09-04 21:18:55 +0000},
+	Edition = {4},
+	Owner = {user},
+	Publisher = {McGraw Hill},
+	Timestamp = {2014.04.21},
+	Title = {What is this thing called science},
+	Year = {2013}}
 
 @book{ZuurEa2009,
 	Address = {Berlin etc.},
@@ -29,11 +41,11 @@
 	Title = {Applied Regression Analysis \& Generalized Linear Models},
 	Year = {2016}}
 
-@book{FahrmeierEa2013,
+@book{FahrmeirEa2013,
 	Address = {Berlin etc.},
 	Author = {Ludwig Fahrmeir and Thomas Kneib and Stefan Lang and Brian Marx},
 	Date-Added = {2017-09-04 17:40:58 +0000},
-	Date-Modified = {2017-09-04 17:40:58 +0000},
+	Date-Modified = {2017-09-04 21:07:46 +0000},
 	Owner = {user},
 	Publisher = {Springer},
 	Timestamp = {2014.05.28},
