--- a/localpackages.tex
+++ b/localpackages.tex
@@ -1,7 +1,6 @@
-\usepackage{tabularx} 
+\usepackage{knitr}
 
-%% to add additional information to the right of examples, uncomment the following line
-% \usepackage{jambox}
+\usepackage{tabularx} 
 
 \usepackage{./langsci/styles/langsci-optional}
 \usepackage{./langsci/styles/langsci-gb4e}
@@ -17,7 +16,6 @@
 \usepackage{listings}
 
 \usepackage{unicode-math}
-\setmathfont[Scale=MatchUppercase]{libertinusmath-regular.otf}
 
 \usepackage{csquotes}
 \usepackage{fontspec}
