Fixing minor errors in preface & main.

--- a/localcommands.tex
+++ b/localcommands.tex
@@ -33,6 +33,7 @@
 
 % Use a better mono font, ideal for code.
 % https://github.com/chrissimpkins/codeface/tree/master/fonts/inconsolata-g
+%\setmonofont{Inconsolata-g}
 \setmonofont{Inconsolata-g}
 
 
