Adding structure in all chapters.

--- a/localpackages.tex
+++ b/localpackages.tex
@@ -1,6 +1,7 @@
 \usepackage{knitr}
 
 \usepackage{tabularx} 
+\usepackage{longtable}
 
 \usepackage{./langsci/styles/langsci-optional}
 \usepackage{./langsci/styles/langsci-gb4e}
