--- a/langsci/styles/langsci-tbls.sty
+++ b/langsci/styles/langsci-tbls.sty
@@ -9,9 +9,7 @@
 \mdfsetup{apptotikzsetting={\tikzset{mdfbackground/.append style={draw=none}}}}
 
 \newcommand{\langscisymbol}{book}
-\newcommand{\tblsboxcolor}{black}
-\newcommand{\tblslinecolor}{lsYellow}
-\newcommand{\tblsfillcolor}{black!12}
+\newcommand{\tblscolor}{black!12}
 
 \newlength{\tblslinewidth}
 \setlength{\tblslinewidth}{1.25mm}
@@ -21,7 +19,7 @@
 \newlength{\logowidth}
 \setlength{\logowidth}{6mm}
 \newlength{\logolinewidth}
-\setlength{\logolinewidth}{2.5pt}
+\setlength{\logolinewidth}{3pt}
 \newlength{\abovetitlespacing}
 \setlength{\abovetitlespacing}{5mm}
 \newlength{\allmargins}
@@ -29,7 +27,7 @@
 
 \mdfdefinestyle{tblsfilledbox}{
 	hidealllines=true,
-	backgroundcolor=\tblsfillcolor,
+	backgroundcolor=\tblscolor,
 	frametitleaboveskip=\abovetitlespacing,
 	frametitlebelowskip=0mm,
 	frametitlerule=false,
@@ -44,7 +42,7 @@
 	everyline=true,
 	ignorelastdescenders=true,
 	linewidth=0pt,
-	backgroundcolor=\tblsboxcolor,
+	backgroundcolor=\tblscolor,
 	innerleftmargin=\allmargins,
 	innerrightmargin=\allmargins,
 	innerbottommargin=\allmargins,
@@ -56,24 +54,24 @@
 	firstextra={\useasboundingbox (P) rectangle (P);
 	            \node[xshift=\allmargins,
 	                  right,
-	                  draw=\tblsboxcolor,
+	                  draw=\tblscolor,
 	                  line width=\logolinewidth,
 	                  rectangle,
 	                  minimum size=\logowidth,
 	                  fill=white
-	                 ] at (P-|O) {\color{\tblsboxcolor}
+	                 ] at (P-|O) {\color{\tblscolor}
 	                              \includegraphics[width=\symbolwidth]{langsci/graphics/tbls-\langscisymbol.pdf}
 	                             };
 	           }, % if environment is on multiple pages, print this on the first page.
 	singleextra={\useasboundingbox (P) rectangle (P);
 	             \node[xshift=\allmargins,
 	                   right,
-	                   draw=\tblsboxcolor,
+	                   draw=\tblscolor,
 	                   line width=\logolinewidth,
 	                   rectangle,
 	                   minimum size=\logowidth,
 	                   fill=white
-	                  ] at (P-|O) {\color{\tblsboxcolor}
+	                  ] at (P-|O) {\color{\tblscolor}
 	                               \includegraphics[width=\symbolwidth]{langsci/graphics/tbls-\langscisymbol.pdf}
 	                               };
 	            } % if env. does not span multiple pages, print the same.
@@ -88,7 +86,7 @@
 	frametitlerule=false,
 	repeatframetitle=false,
 	linewidth=\tblslinewidth,
-	linecolor=\tblslinecolor,
+	linecolor=\tblscolor,
 	innerbottommargin=\allmargins,
 	innertopmargin=\allmargins,
 	innerleftmargin=0mm,
@@ -104,7 +102,7 @@
 	frametitlerule=false,
 	repeatframetitle=false,
 	linewidth=\tblslinewidth,
-	linecolor=\tblslinecolor,
+	linecolor=\tblscolor,
 	innerbottommargin=\allmargins,
 	innertopmargin=\allmargins,
 	innerleftmargin=0mm,
@@ -112,23 +110,23 @@
 	firstextra={\useasboundingbox (P) rectangle (P);
 	            \node[xshift=\allmargins,
 	                  right,
-	                  draw=\tblslinecolor,
+	                  draw=\tblscolor,
 	                  line width=\logolinewidth,
 	                  rectangle,
 	                  minimum size=\logowidth,
-	                  fill=white] at (P-|O) {\color{\tblslinecolor}
+	                  fill=white] at (P-|O) {\color{\tblscolor}
 	                                         \includegraphics[width=\symbolwidth]{langsci/graphics/tbls-\langscisymbol.pdf}
 	                                        };
              }, % if environment is on multiple pages, print this on the first page.
 	singleextra={\useasboundingbox (P) rectangle (P);
 	             \node[xshift=\allmargins,
 	                   right,
-	                   draw=\tblslinecolor,
+	                   draw=\tblscolor,
 	                   line width=\logolinewidth,
 	                   rectangle,
 	                   minimum size=\logowidth,
 	                   fill=white
-	                  ] at (P-|O) {\color{\tblslinecolor}
+	                  ] at (P-|O) {\color{\tblscolor}
 	                               \includegraphics[width=\symbolwidth]{langsci/graphics/tbls-\langscisymbol.pdf}
 	                              };
 	            } % if env. does not span multiple pages, print the same.
@@ -141,7 +139,7 @@
 	frametitlerule=false,
 	repeatframetitle=false,
 	linewidth=\tblslinewidth,
-	linecolor=\tblslinecolor,
+	linecolor=\tblscolor,
 	innerbottommargin=\allmargins,
 	innertopmargin=\allmargins
 }	
@@ -149,35 +147,35 @@
 	
 \mdfdefinestyle{tblsiconframedbox}{
 	linewidth=\tblslinewidth,
-	linecolor=\tblslinecolor,
+	linecolor=\tblscolor,
 	innerleftmargin=\allmargins,
 	innerrightmargin=\allmargins,
 	innerbottommargin=\allmargins,
 	frametitleaboveskip=2\abovetitlespacing,
-	frametitlebelowskip=\allmargins,
+	frametitlebelowskip=5mm,
 	frametitlerule=false,
 	innertopmargin=0,
 	repeatframetitle=false,
 	firstextra={\useasboundingbox (P) rectangle (P);
 	            \node[xshift=\allmargins,
 	                  right,
-	                  draw=\tblslinecolor,
+	                  draw=\tblscolor,
 	                  line width=\logolinewidth,
 	                  rectangle,
 	                  minimum size=\logowidth,
-	                  fill=white] at (P-|O) {\color{\tblslinecolor}
+	                  fill=white] at (P-|O) {\color{\tblscolor}
 	                                         \includegraphics[width=\symbolwidth]{langsci/graphics/tbls-\langscisymbol.pdf}
 	                                        };
              }, % if environment is on multiple pages, print this on the first page.
 	singleextra={\useasboundingbox (P) rectangle (P);
 	             \node[xshift=\allmargins,
 	                   right,
-	                   draw=\tblslinecolor,
+	                   draw=\tblscolor,
 	                   line width=\logolinewidth,
 	                   rectangle,
 	                   minimum size=\logowidth,
 	                   fill=white
-	                  ] at (P-|O) {\color{\tblslinecolor}
+	                  ] at (P-|O) {\color{\tblscolor}
 	                               \includegraphics[width=\symbolwidth]{langsci/graphics/tbls-\langscisymbol.pdf}
 	                              };
 	            } % if env. does not span multiple pages, print the same.
@@ -190,7 +188,7 @@
 
 % {color}{title}{text}
 \newcommand{\tblscolorbox}[3]{
-  \renewcommand{\tblsfillcolor}{#1}
+  \renewcommand{\tblscolor}{#1}
   \begin{mdframed}[style=tblsfilledbox,frametitle={#2}]
     #3
   \end{mdframed}
@@ -200,7 +198,7 @@
 % {color}{icon}{title}{text}
 \newcommand{\tblsiconcolorbox}[4]{
   \renewcommand{\langscisymbol}{#2}
-  \renewcommand{\tblsboxcolor}{#1}
+  \renewcommand{\tblscolor}{#1}
   \begin{mdframed}[style=tblsfillediconbox,frametitle={#3}]
     #4
   \end{mdframed}
@@ -209,7 +207,7 @@
 
 % {color}{title}{text}
 \newcommand{\tblssandwich}[3]{
-  \renewcommand{\tblslinecolor}{#1}
+  \renewcommand{\tblscolor}{#1}
   \begin{mdframed}[style=tblslinebox,frametitle={#2}]
     #3
   \end{mdframed}
@@ -217,7 +215,7 @@
 
 % {color}{icon}{title}{text}
 \newcommand{\tblsiconsandwich}[4]{
-  \renewcommand{\tblslinecolor}{#1}
+  \renewcommand{\tblscolor}{#1}
   \renewcommand{\langscisymbol}{#2}
   \begin{mdframed}[style=tblsiconlinebox,frametitle={#3}]
     #4
@@ -227,7 +225,7 @@
 
 % \tblsfd{color}{title}{content}
 \newcommand{\tblsframebox}[3]{
-  \renewcommand{\tblslinecolor}{#1}
+  \renewcommand{\tblscolor}{#1}
   \begin{mdframed}[style=tblsframedbox,frametitle={#2}]
     #3
   \end{mdframed}
@@ -236,7 +234,7 @@
 % \tblsfd{color}{icon}{title}{content}
 \newcommand{\tblsiconframebox}[4]{
   \renewcommand{\langscisymbol}{#2}
-  \renewcommand{\tblslinecolor}{#1}
+  \renewcommand{\tblscolor}{#1}
   \begin{mdframed}[style=tblsiconframedbox,frametitle={#3}]
     #4
   \end{mdframed}
