--- a/langsci/styles/langsci-tbls.sty
+++ b/langsci/styles/langsci-tbls.sty
@@ -223,7 +223,7 @@
 }
 
 
-% \tblsfd{color}{title}{content}
+% {color}{title}{content}
 \newcommand{\tblsframebox}[3]{
   \renewcommand{\tblscolor}{#1}
   \begin{mdframed}[style=tblsframedbox,frametitle={#2}]
@@ -231,7 +231,7 @@
   \end{mdframed}
 }
 
-% \tblsfd{color}{icon}{title}{content}
+% {color}{icon}{title}{content}
 \newcommand{\tblsiconframebox}[4]{
   \renewcommand{\langscisymbol}{#2}
   \renewcommand{\tblscolor}{#1}
