Initial move from SMIL to STIL.

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,10 +1,10 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for User at 2017-09-04 23:18:55 +0200 
+%% Created for User at 2017-09-04 23:18:55 +0200
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
 
@@ -101,3 +101,11 @@
 	Title = {Type {I} Error Rate Comparisons of Post Hoc Procedures for {I}x{J} Chi-Square Tables},
 	Volume = {60},
 	Year = {2000}}
+
+
+@book{Mayo2018,
+	Address = {Cambridge},
+	Author = {Deborah G. Mayo},
+	Publisher = {{C}ambridge {U}niversity {P}ress},
+	Title = {Statistical Inference as Severe Testing: How to Get Beyond the Statistics Wars},
+	Year = {2018}}
