--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -1,7 +1,23 @@
-\title{Statistical Modeling in Linguistics}
-\subtitle{A systematic introduction with instructions for using R}
-\BackTitle{Statistical Modeling in Linguistics}
-\BackBody{Change your blurb in localmetadata.tex}
+\title{Statistical Inference in Linguistics}
+\subtitle{}
+\BackTitle{Statistical Inference in Linguistics}
+\BackBody{%
+  This book introduces linguists to statistical thinking.
+  Unlike all other existing text books on statistics for linguistists, this book is no hands-on introduction to running statistical tests in R or SPSS or some other statistics software package.
+  Instead, it begins with a reflection on the philosophy of science and the philosophy of statistics, discussing the influential approaches to statistics mostly labled Frequentivism (Fisher and Neyman-Pearson), Likelihoodism, and Bayesianism (subjective and default).
+  Since the author is not a philosopher, this section is mostly intended to motivate readers to read sources by philosophers of science and statistics, prominently Deborah G.\ Mayo, whose Probativist approach the author adopts for the remainder of the book.
+
+  In the remainder of the book, some prominent statistical tests and models are introduced.
+  Instead of just presenting them as recipes for doing instant science without thinking, they are viewed as part of the whole process of making scientific inferences, which also requires the formation of theories, experiment design, etc.
+  A series of videos accompanying the book will be published to introduce the statistical methods in the R software package.
+
+  \vspace{1\baselineskip}
+  \noindent\textbf{Roland Schäfer} works on linguistics, German grammar, teaching methodology, and applied computational linguistics (for the purpose of corpus creation).
+  He obtained an M.A. in linguistics at Marburg University, a PhD in English linguistics at Göttingen University, and a venia legendi (which is the qualification for full professorship in the German-speaking system) in German and general linguistics at Humboldt University (Berlin).
+  He worked at Göttingen University and Freie Universität Berlin and has held visiting professorships at Göttingen University and Freie Universität Berlin.
+  Roland Schäfer has published numerous works so-called grammatical alternations in German, using both corpus analysis and experimental techniques as well as advanced statistical analysis.
+  His teaching expertise (at Göttingen University and Freie Universität Berlin as well as international workshops and summer schools) includes theoretical linguistics, German and English linguistics, empirical methods, statistics, and computational linguistics.
+}
 \dedication{Dedicated to a randomly chosen individual.}
 \typesetter{Roland Schäfer}
 %\proofreader{Change proofreaders in localmetadata.tex}
@@ -14,4 +30,4 @@
 \renewcommand{\lsSeries}{tbls}
 \renewcommand{\lsSeriesNumber}{99}
 % \renewcommand{\lsURL}{http://langsci-press.org/catalog/book/000}
-  
+
