--- a/localseealso.tex
+++ b/localseealso.tex
@@ -1,4 +1,3 @@
-\is{some term| see {some other term}}
-\il{some language| see {some other language}}
-\issa{some term with pages}{some other term also of interest}
-\ilsa{some language with pages}{some other lect also of interest}
+\is{Fisher-Yates Test|see {Fisher Exact Test}}
+% \il{some language| see {some other language}}
+% \issa{some term with pages}{some other term also of interest}
