--- a/main.Rnw
+++ b/main.Rnw
@@ -7,25 +7,25 @@
   , showindex
 %  , draftmode
 ]{langsci/langscibook}
-  
+
 \input{localmetadata.tex}
 \input{localpackages.tex}
 \input{localhyphenation.tex}
-\input{localcommands.tex} 
+\input{localcommands.tex}
 
-\bibliography{localbibliography} 
+\bibliography{localbibliography}
 
-\begin{document}     
+\begin{document}
 
-\maketitle                
+\maketitle
 \frontmatter
 
-\currentpdfbookmark{Contents}{name} 
+\currentpdfbookmark{Contents}{name}
 \tableofcontents
 \include{chapters/preface}
 \include{chapters/acknowledgments}
-\include{chapters/abbreviations} 
-\mainmatter  
+\include{chapters/abbreviations}
+\mainmatter
 
 << setup, cache=FALSE, echo=FALSE, include=FALSE, results='asis'>>=
 opts_knit$set(self.contained=FALSE)
@@ -47,28 +47,7 @@ render_listings()
 <<child="chapters/01.Rnw">>=
 @
 
-<<child="chapters/02.Rnw">>=
-@
-
-<<child="chapters/03.Rnw">>=
-@
-
-<<child="chapters/04.Rnw">>=
-@
-
-<<child="chapters/05.Rnw">>=
-@
-
-<<child="chapters/06.Rnw">>=
-@
-
-<<child="chapters/07.Rnw">>=
-@
-
-<<child="chapters/08.Rnw">>=
-@
-
-% \input{localseealso.tex} 
-\input{backmatter.tex} 
-\end{document} 
+\input{localseealso.tex}
+\input{backmatter.tex}
+\end{document}
 
