Starting in the middle, with t-test.

--- a/localcommands.tex
+++ b/localcommands.tex
@@ -15,8 +15,16 @@
 
 
 % RS abbreviations.
-\newcommand{\ie}{i.\,e.,\ }
+\newcommand{\zb}{z.\,B.\ }
+\newcommand{\Prime}{\ensuremath{\prime}}
 
+\newcommand{\Hcal}{\ensuremath{\mathcal{H}}}
+\newcommand{\Tcal}{\ensuremath{\mathcal{T}}}
+
+\newcommand{\Cause}{\ensuremath{\hookleftarrow}}
+
+\newcommand{\defeq}{\mathrel{:\mkern-0.25mu=}}
+\newcommand{\eqdef}{\mathrel{=\mkern-0.25mu:}}
 
 % Correct hyperref colors which otherwise give you eye cancer.
 \hypersetup{
