--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -1,6 +1,6 @@
-\title{Statistical Inference in Linguistics}
+\title{Statistische Inferenz in der Linguistik}
 \subtitle{}
-\BackTitle{Statistical Inference in Linguistics}
+\BackTitle{Statistische Inferenz in der Linguistik}
 \BackBody{%
   This book introduces linguists to statistical thinking.
   Unlike all other existing text books on statistics for linguistists, this book is no hands-on introduction to running statistical tests in R or SPSS or some other statistics software package.
