--- a/localpackages.tex
+++ b/localpackages.tex
@@ -1,6 +1,6 @@
 \usepackage{knitr}
 
-\usepackage{tabularx} 
+\usepackage{tabularx}
 \usepackage{longtable}
 
 \usepackage{./langsci/styles/langsci-optional}
@@ -9,7 +9,7 @@
 \usepackage{./langsci/styles/langsci-glyphs}
 \usepackage{./langsci/styles/langsci-tbls}
 
-\usepackage[english]{babel}
+\usepackage[ngerman]{babel}
 
 % \usepackage[hang,flushmargin]{footmisc}
 % \setlength\footnotemargin{10pt}
